<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#394048"
    android:orientation="vertical">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:text="@string/app_enabled"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_app_enabled" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/rules"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/correct_prediction"
                android:textSize="14sp"
                android:textColor="#ffffff"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="0"
                android:id="@+id/seekBar_correct_prediction" />
            <TextView
                android:id="@+id/tv_correct_prediction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/zero_value"
                android:textSize="14sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/correct_outcome"
                android:textSize="14sp"
                android:textColor="#ffffff"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="0"
                android:id="@+id/seekBar_correct_outcome" />
            <TextView
                android:id="@+id/tv_correct_outcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/zero_value"
                android:textSize="14sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/correct_outcome_via_penalties"
                android:textSize="14sp"
                android:textColor="#ffffff"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="0"
                android:id="@+id/seekBar_correct_outcome_via_penalties" />
            <TextView
                android:id="@+id/tv_correct_outcome_via_penalties"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/zero_value"
                android:textSize="14sp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/incorrect_prediction_and_outcome"
                android:textSize="14sp"
                android:textColor="#ffffff"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="0"
                android:id="@+id/seekBar_incorrect_prediction_and_outcome" />
            <TextView
                android:id="@+id/tv_incorrect_prediction_and_outcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/zero_value"
                android:textSize="14sp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_set_system_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_system_date"
            android:textSize="20sp"
            android:textColor="#ffffff"/>
        <TextView
            android:id="@+id/tv_system_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#ffffff"/>

        <Button
            android:id="@+id/bt_set_system_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textAllCaps="true"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_set_system_date"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#44ffffff"
        android:orientation="vertical">

        <DatePicker
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/datePicker_system_date" />

        <TimePicker
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/timePicker_system_date" />

        <Button
            android:visibility="gone"
            android:id="@+id/bt_set_timePicker_system_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_below="@id/timePicker_system_date"/>

        <Button
            android:visibility="gone"
            android:id="@+id/bt_set_datePicker_system_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_below="@id/datePicker_system_date"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/rl_progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#44ffffff">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>
