<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cl_group_a"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:cardCornerRadius="4dp"
                custom:cardElevation="@dimen/cardview_default_elevation"
                custom:cardBackgroundColor="#aaffffff"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                custom:contentPadding="5dp"

                android:layout_alignParentTop="true" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <!-- -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_group_a"
                        android:text="@string/group_a"
                        android:layout_marginBottom="3dp"
                        android:textSize="18sp" />

                    <include layout="@layout/list_item_group"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/tv_group_row_a"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listView_groupA"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="NestedScrolling" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cl_group_b"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:cardCornerRadius="4dp"
                custom:cardElevation="@dimen/cardview_default_elevation"
                custom:cardBackgroundColor="#aaffffff"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                custom:contentPadding="5dp"

                android:layout_below="@id/cl_group_a" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <!-- -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_group_b"
                        android:textSize="18sp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/group_b"/>

                    <include layout="@layout/list_item_group"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/tv_group_row_b"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listView_groupB"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="NestedScrolling" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- -->


            <android.support.v7.widget.CardView
                android:id="@+id/cl_group_c"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:cardCornerRadius="4dp"
                custom:cardElevation="@dimen/cardview_default_elevation"
                custom:cardBackgroundColor="#aaffffff"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                custom:contentPadding="5dp"

                android:layout_below="@id/cl_group_b" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_group_c"
                        android:textSize="18sp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/group_c"/>

                    <include layout="@layout/list_item_group"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/tv_group_row_c"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listView_groupC"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="NestedScrolling" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- -->

            <android.support.v7.widget.CardView
                android:id="@+id/cl_group_d"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:cardCornerRadius="4dp"
                custom:cardElevation="@dimen/cardview_default_elevation"
                custom:cardBackgroundColor="#aaffffff"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                custom:contentPadding="5dp"

                android:layout_below="@id/cl_group_c" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_group_d"
                        android:textSize="18sp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/group_d"/>

                    <include layout="@layout/list_item_group"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/tv_group_row_d"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listView_groupD"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="NestedScrolling" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- -->


            <android.support.v7.widget.CardView
                android:id="@+id/cl_group_e"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:cardCornerRadius="4dp"
                custom:cardElevation="@dimen/cardview_default_elevation"
                custom:cardBackgroundColor="#aaffffff"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                custom:contentPadding="5dp"

                android:layout_below="@id/cl_group_d" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_group_e"
                        android:textSize="18sp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/group_e"/>

                    <include layout="@layout/list_item_group"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/tv_group_row_e"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listView_groupE"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="NestedScrolling" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- -->


            <android.support.v7.widget.CardView
                android:id="@+id/cl_group_f"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:cardCornerRadius="4dp"
                custom:cardElevation="@dimen/cardview_default_elevation"
                custom:cardBackgroundColor="#aaffffff"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                custom:contentPadding="5dp"

                android:layout_below="@id/cl_group_e" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_group_f"
                        android:textSize="18sp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/group_f"/>

                    <include layout="@layout/list_item_group"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/tv_group_row_f"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listView_groupF"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="NestedScrolling" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- -->


            <TextView
                android:id="@+id/tv_edit_system_data"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@id/cl_group_f"
                android:text="@string/edit_system_data"
                android:textColor="@android:color/white"
                >
            </TextView>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_update_matches_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/stat_sys_upload_done" />
</RelativeLayout>